Configurable epochAdjustment in Deadline (#352)
Configurable epochAdjustment in Deadline
Fixes https://github.com/nemtech/symbol-sdk-java/issues/351
Revisited integration tests